# randcompress

./: .gitignore  ADAPTIVE_SPLITTING_IMPLEMENTATION.md  CLAUDE.md  COMPRESSION_IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
compression_results/: benchmark_results.csv  benchmark_results.json  report.html
datasets/: README.md  juz1.txt  juz1_nl.txt  quran-uthmani_nl.txt  surat_al-fatihah.txt  surat_al-fatihah_nl.txt
examples/: COMPRESSION_README.md  README.md  XLSTM_EQUATIONS.md  analyze_results.py  benchmark_compression.py  decompress.py  linear_rnn_curriculum.py  linear_rnn_srp.py  linear_rnn_srp_compress.py  linear_rnn_srp_decompress.py  linear_rnn_srp_quran.py  old.py  quick_start.py  randcompress_.py  randcompress_v1.py  randcompress_v10.1.py  randcompress_v10.2.py  randcompress_v10.py  randcompress_v2.1.py  randcompress_v2.py  randcompress_v2_small.py  randcompress_v3.1.py  randcompress_v4.1.py  randcompress_v4.2_inline.py  randcompress_v4.2_long.py  randcompress_v4.2_long_inline.py  randcompress_v4.2_quran.py  randcompress_v4.3.py  randcompress_v4.4.1.py  randcompress_v4.4.2.py  randcompress_v4.4.3.1.py  randcompress_v4.4.3.py  randcompress_v4.4.py  randcompress_v4.5.1.py  randcompress_v4.5.py  randcompress_v5.1.py  randcompress_v5.py  randcompress_v6.py  randcompress_v7.py  randcompress_v8.1.py  (+12 more)
examples/old/: XLSTM_EQUATIONS.md  XLSTM_README.md  diag_cdf_match.py  linear_rnn_srp_decompress_old_jax_rc.py  linear_rnn_srp_v2.py  randcompress_lora.py  randcompress_lora_fatihah.py  randcompress_lora_persistent.py  randcompress_lora_scan.py  randcompress_lora_tbptt.py  randcompress_v1.1.py  randcompress_v2.py  (+17 more)
log_old/: check.txt  check_quran.txt
randcompress/: __init__.py  hyperparams.py
(+77 files in other folders)
