[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "randcompress"
version = "0.1.0"
description = "Random compression utilities"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Raden Muaz Munim"}]
requires-python = ">=3.10"
dependencies = ["jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/yourusername/randcompress"
